Bug fixed on IE for images and videos + margin News

--- a/src/components/Follow/NetlifySignupForm.css
+++ b/src/components/Follow/NetlifySignupForm.css
@@ -13,18 +13,10 @@
 	font-weight: bold;
 }
 
-input[type=submit] {
-    /*background-color: #ff5722;*/
+.form-follow input[type=submit] {
     border-radius: 0px;
-    /*width: 50%;*/
-    border: none;
-    color: white;
     padding: 12px 32px;
-    text-decoration: none;
     margin: 0;
-    cursor: pointer;
-    font-size: 25px;
-    font-weight: 500;
 }
 
 .form-follow {
