--- a/src/components/Photos/Modal.css
+++ b/src/components/Photos/Modal.css
@@ -17,7 +17,7 @@
 }
 
 img.modal-content {
-    width: 100%;
+    width: auto;
     height: auto;
     max-height: 120%;
 
