--- a/src/components/Videos/Videos.css
+++ b/src/components/Videos/Videos.css
@@ -1,9 +1,11 @@
+/* autoprefixer grid: autoplace */
+
 .videos {
 	display: grid;
 	justify-content: space-between;
 	/*justify-items: center;*/
 	align-content: start;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-template-columns: repeat(4, minmax(250px, 1fr));
 	grid-template-rows: repeat(2, 180px);
 	grid-gap: 20px;
 	/*margin-left: 30px;
@@ -15,29 +17,36 @@
 
 @media only screen and (max-width: 1206px) {
 	.videos {
-		grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+		grid-template-columns: repeat(4, minmax(210px, 1fr));
 		grid-template-rows: repeat(2, 140px);
 	}
 }
 
 @media only screen and (max-width: 1020px) {
 	.videos {
-		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+		grid-template-columns: repeat(2, minmax(300px, 1fr));
 		grid-template-rows: repeat(4, 200px);
 	}
 }
 
 @media only screen and (max-width: 746px) {
 	.videos {
-		grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+		grid-template-columns: repeat(2, minmax(200px, 1fr));
 		grid-template-rows: repeat(4, 200px);
 	}
 }
 
 @media only screen and (max-width: 540px) {
 	.videos {
-		grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+		grid-template-columns: repeat(1, minmax(200px, 1fr));
 		grid-template-rows: repeat(8, 200px);
+	}
+}
+
+@media only screen and (max-width: 450px) {
+	.videos {
+		grid-template-columns: repeat(1, minmax(100px, 1fr));
+		grid-template-rows: repeat(8, 150px);
 	}
 }
 
